# yavml

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: CI.yml
src/: lib.rs  vec2.rs  vec2d.rs
src/vec2/: mod.rs  tests.rs  vec2d.rs  vec2f.rs  vec2i.rs
src/vec2d/: tests.rs  vec2f32.rs  vec2i.rs
