[package]
name = "yavml"
version = "0.1.0"
edition = "2021"
authors = ["Arin Siefert <arins123@outlook.com>"]
repository = ""
license = "MIT or Apache 2.0"
description = "An extremely basic vector math library. Not meant to be used in serious applications"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
bench = false

[profile.dev]
panic = "abort"
opt-level = "s"

[profile.release]
panic = "abort"
opt-level = "z"